# GaussCSE

./: README.md  pyproject.toml  requirements.txt  run.sh
scripts/14/: 0.sh  1.sh  2.sh  3.sh
scripts/n4/: 0.sh  1.sh  2.sh  3.sh
src/: aggr.py  download.sh  main.py  models.py  prepare.py  similarity.py  utils.py
src/evals/: __init__.py  direction.py  nli.py  sts.py
